--- a/style.css
+++ b/style.css
@@ -5,16 +5,19 @@ body {
 h1 {
   font-size: 50px;
 }
+h2 {
+  font-size: 20px;
+}
 .orange-color {
   color: orange;
 }
-section {
+.flexible-container {
   display: flex;
   margin-bottom: 150px;
 }
 .half-width {
   width: 50%;
-  padding-left: 5px;
+  padding-left: 2px;
 }
 .half-width img {
   width: 80%;
@@ -44,4 +47,30 @@ section {
   background-image: url(/images/header_bg.png);
   background-repeat: no-repeat;
   background-position: right;
+}
+.exprience-item {
+  width: 40%;
+  margin-left: 5%;
+  margin-right: 5%;
+  padding-left: 20px;
+  border-radius: 10px;
+  box-shadow: 10px 10px 40px gray;
+}
+.exprience-area {
+  background-image: url(/images/developer.png);
+  background-repeat: no-repeat;
+  background-position: left;
+}
+#web-dev-exprience {
+  border-left: 7px solid;
+  border-image: linear-gradient(cyan, blue);
+  border-image-slice: 1;
+}
+#web-dev-baby {
+  border-left: 7px solid;
+  border-image: linear-gradient(rgb(255, 0, 191), rgb(0, 255, 166));
+  border-image-slice: 1;
+}
+footer p {
+  text-align: center;
 }
